# syslog-ng

./: .coveralls.yml  .travis.yml  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac  requirements.txt
.github/workflows/: devshell.yml
cmake/: add_tests.cmake
cmake/Modules/: ExternalMONGOC.cmake  FindMONGOC.cmake
contrib/: Brewfile  syslog-ng.conf.doc  syslog2ng
contrib/aix-packaging/: syslog-ng.conf
contrib/fedora-packaging/: syslog-ng.conf
contrib/freebsd-packaging/: syslog-ng.conf.example
contrib/hpux-packaging/: syslog-ng.conf
contrib/lsan/: tests.supp
contrib/openbsd-packaging/: syslog-ng.conf
contrib/rhel-packaging/: syslog-ng.conf
lib/: CMakeLists.txt  Makefile.am  apphook.c  block-ref-grammar.ym  cfg-block.c  cfg-grammar.y  cfg-lex.l  cfg-lexer-mem-pool.c  cfg-lexer-mem-pool.h  cfg-lexer.c  cfg-lexer.h  cfg-parser.c  cfg-parser.h  cfg-tree.c  cfg-tree.h  cfg.c  cfg.h  gprocess.c  gprocess.h  logpipe.h  logreader.c  logsource.c  logsource.h  logwriter.c  logwriter.h  plugin.c  pragma-grammar.ym  resolved-configurable-paths.h  ringbuffer.h  serialize.h  syslog-names.c  tlscontext.c  tlscontext.h  versioning.h
lib/ack-tracker/: CMakeLists.txt  Makefile.am  ack_tracker.h  batched_ack_tracker.c  batched_ack_tracker.h  late_ack_record_container.h
lib/compat/: compat.h  getent-generic.c
lib/eventlog/: CMakeLists.txt
lib/filter/: filter-call.c  filter-cmp.c  filter-expr-grammar.ym  filter-expr-parser.c  filter-expr-parser.h  filter-expr.h  filter-in-list.c  filter-netmask.c  filter-netmask6.c  filter-op.c  filter-pipe.c  filter-pri.c  filter-re.c  filter-tags.c
lib/logmsg/: logmsg-serialize.c  logmsg.c  logmsg.h  nvtable-serialize-legacy.c  nvtable-serialize.c  tags-serialize.c
lib/logmsg/tests/: CMakeLists.txt  test_fuzzing_logmsg_serialize.c  test_log_message.c
lib/logmsg/tests/corpus/: pattern
lib/logproto/: logproto-buffered-server.c  logproto-client.h  logproto-indented-multiline-server.c  logproto-regexp-multiline-server.c  logproto-server.h  logproto-text-client.c  logproto-text-server.c  logproto-text-server.h
lib/logthrdest/: logthrdestdrv.c
lib/parser/: parser-expr-grammar.ym  parser-expr.c
lib/rewrite/: rewrite-expr-grammar.ym  rewrite-expr.c  rewrite-groupset.c  rewrite-groupset.h
lib/secret-storage/: nondumpable-allocator.c
lib/template/: macros.c  macros.h
lib/tests/: CMakeLists.txt  Makefile.am  test_lexer_mem_pool.c  test_type_hints.c
lib/value-pairs/: value-pairs.c
libtest/: msg_parse_lib.c  stopwatch.h  testutils.h
m4/: check_java_support.m4
modules/: CMakeLists.txt  Makefile.am
modules/add-contextual-data/: add-contextual-data-grammar.ym  add-contextual-data-parser.c  add-contextual-data.c
modules/afamqp/: CMakeLists.txt  Makefile.am  afamqp-grammar.ym  afamqp-plugin.c  afamqp.c
modules/afamqp/tests/: CMakeLists.txt  Makefile.am  test_afamqp.c
modules/affile/: affile-dest.c  affile-grammar.ym  affile-parser.c  file-list.h  file-opener.c  poll-file-changes.c
modules/afmongodb/: CMakeLists.txt  Makefile.am  afmongodb-grammar.ym  afmongodb.c  host-list.h
modules/afmongodb/tests/: test-mongodb-config.c
modules/afprog/: afprog-grammar.ym
modules/afsmtp/: afsmtp-grammar.ym  afsmtp.c
modules/afsocket/: afinet-source.c  afinet-source.h  afsocket-dest.c  afsocket-grammar.ym  afsocket-parser.c  afsocket-plugin.c
modules/afsql/: afsql-grammar.ym  afsql.c
modules/afstomp/: afstomp-grammar.ym  afstomp.c  stomp.h
modules/afstreams/: afstreams-grammar.ym
modules/afuser/: afuser-grammar.ym
modules/appmodel/: appmodel-grammar.ym
modules/csvparser/: csvparser-grammar.ym  csvparser.c
modules/date/: date-grammar.ym
modules/dbparser/: CMakeLists.txt  Makefile.am  correllation-context.c  correllation-key.c  correllation-key.h  dbparser-grammar.ym  dbparser.c  groupingby.c  patterndb.c  pdb-ruleset.c  radix.c  radix.h  synthetic-message.c
modules/diskq/: diskq-grammar.ym
modules/geoip/: geoip-parser-grammar.ym
modules/geoip2/: geoip-parser-grammar.ym  geoip-parser.c  maxminddb-helper.c
modules/heartbeat/: CMakeLists.txt  Makefile.am  heartbeat-grammar.ym  heartbeat-option.c  heartbeat-option.h  heartbeat-parser.c  heartbeat-parser.h  heartbeat-plugin.c  heartbeat-source-driver.c  heartbeat-source-driver.h  heartbeat-source.c  heartbeat-source.h
modules/hook-commands/: hook-commands-grammar.ym
modules/http/: http-grammar.ym  http-loadbalancer.c  http-loadbalancer.h  http-worker.c  http.c
modules/java/: CMakeLists.txt  Makefile.am
modules/json/: format-json.c  json-parser-grammar.ym  json-parser.c
modules/kafka/: CMakeLists.txt  Makefile.am  kafka-dest-driver.c  kafka-dest-driver.h  kafka-dest-worker.c  kafka-grammar.ym  kafka-parser.c  kafka-plugin.c  (+4 more)
scl/: CMakeLists.txt
scripts/: update-dependencies.sh
tests/: build-log-cflags-propagation.sh
(+115 files in other folders)
